--- a/5.0/formats/news-with-images.vm
+++ b/5.0/formats/news-with-images.vm
@@ -134,18 +134,20 @@
 
     <![CDATA[#protect
     <script>
+    // Parameters: category, limit, offset
+    // Category number corresponds to UC San Diego Today topic categories; separate multiple categories with |
     var url = "https://today.ucsd.edu/news-and-features-api?category=${feedCategoryString}&limit=3";
     
     getData(url);
     
     function getData(theurl) {
         var xmlhttp = new XMLHttpRequest();
-        xmlhttp.open("GET", theurl, true);
-        xmlhttp.onload = function() {
+
+
+        xmlhttp.onreadystatechange = function() {
             if (xmlhttp.readyState == XMLHttpRequest.DONE) {
               if (xmlhttp.status == 200) {
-                 var newsData = JSON.parse(xmlhttp.responseText);
-                 
+                 var newsData = JSON.parse(xmlhttp.responseText);           
                  for (var index = 0; index < 3; index++) {
                     var headId = "head" + index + "-${categoryStringReplace}";
                     var imgId = "img" + index + "-${categoryStringReplace}";
@@ -153,31 +155,37 @@
                     var urlId = "url" + index + "-${categoryStringReplace}";
                     
                     if (newsData[index].entry_date >= 1660546800000) {
-                       if (newsData[index].teaser_photo) {
                            image = newsData[index].teaser_photo;
                            var lastSegIndex = image.lastIndexOf('/');
                            var firstSeg = image.slice(0, lastSegIndex);
                            var lastSeg = image.slice(lastSegIndex)
                            var feedImage = firstSeg + '/_ucsd-feed' + lastSeg;
                            image = feedImage;
-                       }
-                       else {
-                            image = "https://cdn.ucsd.edu/cms/decorator-5/img/news-placeholder.png";
-                       }
                     } else {
                        if (newsData[index].feature_image) {
                           image = newsData[index].feature_image;
                        } else if (newsData[index].primary_photo) {
                           image = newsData[index].primary_photo;
                        } else {
-                          image = "https://cdn.ucsd.edu/cms/decorator-5/img/news-placeholder.png";
+                          image = "https://today.ucsd.edu/img/news-placeholder.jpg";
                        }
                     }
                     document.getElementById(imgId).src = image;
 				        document.getElementById(headId).innerText = newsData[index].title;
                     document.getElementById(dateId).innerText = timeConverter(newsData[index].entry_date);
                     var urls = document.getElementsByClassName(urlId);
-                    var newsUrl = "https://today.ucsd.edu" + "/story/" + newsData[index].url_title;
+                    
+                    var channelId = newsData[index].channel_id;
+                    var channelUrlSegment = '/story/';
+                    if (channelId == 21) {
+                    channelUrlSegment = '/photo-essays/';
+                    } else if (channelId == 12) {
+                    channelUrlSegment = '/slideshows/';
+                    } else if (channelId == 17) {
+                    channelUrlSegment = '/videos/';
+                    }
+                    var newsUrl = "https://today.ucsd.edu" + channelUrlSegment + newsData[index].url_title;;
+                    
                     for (var j = 0; j < urls.length; j++) {
                        urls[j].setAttribute("href", newsUrl);
                    }
@@ -186,15 +194,10 @@
                   }
                 }
               }
-              else if (xmlhttp.status == 400) {
-                  console.log('Status: Error 400 returned');
-              }
-              else {
-                   console.log('Status:' + xmlhttp.status);
-              }
             }
         };
     
+        xmlhttp.open("GET", theurl, true);
         xmlhttp.send();
     }
 
