--- a/5.0/formats/text-block.vm
+++ b/5.0/formats/text-block.vm
@@ -25,19 +25,18 @@
         #set ($CustomBg = $textBlock.getChild("custom-bg").getChild("path").text)
         #set ($CustomOverlay = $textBlock.getChild("overlay-color").text)
         #if($CustomOverlay == "navy")
-            #set ($InlineStyle = "style='background:linear-gradient(0deg, rgba(24, 43, 73, 0.8), rgba(24, 43, 73, 0.8)), url([system-asset]${CustomBg}[/system-asset]);'")
+            #set ($InlineStyle = "background:linear-gradient(0deg, rgba(24, 43, 73, 0.8), rgba(24, 43, 73, 0.8)),")
         #else
-            #set ($InlineStyle = "style='background:linear-gradient(0deg, rgba(0, 95, 155, 0.8), rgba(0, 95, 155, 0.8)), url([system-asset]${CustomBg}[/system-asset]);'")
+            #set ($InlineStyle = "background:linear-gradient(0deg, rgba(0, 95, 155, 0.8), rgba(0, 95, 155, 0.8)),")
         #end
     #end
     
-    <section class='jumbotron jumbotron-callout-content-one $style' #if($InlineStyle !="")$InlineStyle#end >
+    <section class='jumbotron jumbotron-callout-content-one $style' #if($InlineStyle !="")style='$InlineStyle url("[system-asset]${CustomBg}[/system-asset]");'#end >
 		<div class="container">
         	<div class="text-indent">
-                #if($TbHeadline && $TbHeadline.trim().length() > 0)
-                <h2>$_EscapeTool.xml($TbHeadline)</h2>
+				#if($TbHeadline && $TbHeadline.trim().length() > 0)
+                    <h2>$_EscapeTool.xml($TbHeadline)</h2>
                 #end
-
         	</div>
 	        <div class="row">
 	         	<div class="col-md-10">
